# to-do-application

./: README.md  docker-compose.yml
backend/go-backend/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum  init.sql  realm-export.json
backend/go-backend/src/: main.go
backend/go-backend/src/keycloak/: keycloak.go
backend/go-backend/src/models/: task.go
backend/go-backend/src/router/: router.go
backend/go-backend/src/services/: loginService.go  middlewar.go  taskService.go
backend/go-backend/src/utils/: database.go
backend/java-spring/: pom.xml
backend/java-spring/src/main/java/com/example/javaspring/: TaskController.java
backend/java-spring/src/main/resources/: application.properties  schema-postgres.sql
backend/rust-backend/: .env  Cargo.toml  Dockerfile
backend/rust-backend/migrations/2021-10-18-122651_create_tasks/: up.sql
backend/rust-backend/src/: db.rs  errors.rs  main.rs  model.rs  route.rs  schema.rs
backend/rust-backend/src/domainmodel/: task.rs
backend/rust-backend/src/model/: mod.rs  route.rs  task.rs
backend/rust-backend/src/task/: mod.rs  model.rs  routes.rs
frontend/reactjs/: package-lock.json  package.json
frontend/reactjs/src/: App.css  App.js  App.tsx
frontend/reactjs/src/components/: ToDoItem.tsx  ToDoList.tsx  TodoForm.tsx
frontend/reactjs/src/interfaces/: todo-form-interface.ts  todo-interface.ts  todo-item-interface.ts  todo-list-interace.ts
frontend/vuejs/vue-frontend/: package.json
frontend/vuejs/vue-frontend/src/: App.vue
frontend/vuejs/vue-frontend/src/components/: AddToDo.vue  ToDo.vue  ToDos.vue
(+8 files in other folders)
