[package]
name = "rust-backend"
version = "0.1.0"
authors = ["Juri <juri.lozowoj@freenet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
listenfd = "0.3"

# time
chrono = "0.4"

# de-/serialize JSON
serde = "1.0"
serde_json = "1.0"

# diesel for postgres
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"