[package]
name = "rust-backend"
version = "0.1.0"
authors = ["Juri <juri.lozowoj@freenet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.0"
actix-service = "1.0.1"
listenfd = "0.3"

reqwest = "0.9.22"
derive_more = "0.99.2"

# jwt
alcoholic_jwt = "1.0.0"

# time
chrono = { version = "0.4", features = ["serde"] }

# de-/serialize JSON
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# diesel for postgres
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
lazy_static = "1.4"
r2d2 = "0.8"
env_logger = "0.6"
askama = "0.10"